--- a/assets/project.bib
+++ b/assets/project.bib
@@ -22,3 +22,61 @@
 	year = {1960},
 	pages = {12},
 }
+
+@misc{civil_aeronautics_board_investigation_1959,
+	title = {Investigation of {Aircraft} {Accident}: {SOUTHEAST} {AIRLINES}: {BRISTOL}, {TENNESSEE}: 1959-01-08},
+	shorttitle = {Investigation of {Aircraft} {Accident}},
+	url = {https://rosap.ntl.bts.gov/view/dot/33606},
+	language = {English},
+	urldate = {2024-02-10},
+	editor = {{Civil Aeronautics Board}},
+	month = jan,
+	year = {1959},
+	doi = {10.21949/1500731},
+	note = {Issue: 1-0021},
+	keywords = {Accident analysis, Accident causes, Accident characteristics, Accident investigation, Accident types, Air transportation, Aircraft accidents, Aircraft collisions, Airlines, Aviation safety, Casualties, Civil aviation, Fatalities, Fires, Injury rates, Injury severity, Midair collisions, Near midair collisions, Passengers},
+	file = {Full Text PDF:C\:\\Users\\brasw\\Zotero\\storage\\ZHPJD7TT\\Civil Aeronautics Board - 1959 - Investigation of Aircraft Accident SOUTHEAST AIRL.pdf:application/pdf},
+}
+
+@misc{noauthor_airnav_nodate,
+	title = {{AirNav}: {Navaid} information},
+	url = {https://www.airnav.com/cgi-bin/navaid-info?id=HMV&type=VORTAC&name=HOLSTON+MOUNTAIN},
+	urldate = {2024-02-10},
+	file = {AirNav\: Navaid information:C\:\\Users\\brasw\\Zotero\\storage\\5U2RHWWK\\navaid-info.html:text/html},
+}
+
+@misc{noauthor_details_nodate,
+	title = {Details about {ILS} on {Runway} 23 at {Tri}-cities {Rgnl} {Tn}/va ({TRI})},
+	url = {https://www.airport-data.com/airport/TRI/ils/23.html#ils},
+	urldate = {2024-02-11},
+	file = {Details about ILS on Runway 23 at Tri-cities Rgnl Tn/va (TRI):C\:\\Users\\brasw\\Zotero\\storage\\ZNLS4PAB\\23.html:text/html},
+}
+
+@misc{noauthor_ndb_nodate,
+	title = {The {NDB} \& {Beacon} {Photo} {Gallery} {Section}},
+	url = {http://www.ndblist.info/ndbphotos/beaconpics.htm},
+	urldate = {2024-02-11},
+	file = {The NDB & Beacon Photo Gallery Section:C\:\\Users\\brasw\\Zotero\\storage\\AT569LP3\\beaconpics.html:text/html},
+}
+
+@book{emmett_14_5_miles_from_tri,
+	series = {6},
+	title = {Aviation {Safety} {Digest}},
+	publisher = {Department of Civil Aviation},
+}
+
+@misc{noauthor_curio_nodate,
+	title = {Curio},
+	url = {https://curio.lib.virginia.edu/view/uva-lib:2249472},
+	urldate = {2024-02-11},
+	file = {Curio:C\:\\Users\\brasw\\Zotero\\storage\\QSDN6XFN\\uva-lib2249472.html:text/html},
+}
+
+@article{jcp_cessna_182,
+	title = {3 {Lives} {Claimed} by {Airplane} {Crash} {On} {Holston} {Mountain}},
+	journal = {Johnson City Press-Chronicle},
+	author = {Kovach, Bill},
+	month = jul,
+	year = {1961},
+	pages = {12},
+}
