fix: cleaning up notebook pathing

--- a/notebooks/3_convert_imgs_to_json_text.ipynb
+++ b/notebooks/3_convert_imgs_to_json_text.ipynb
@@ -14,12 +14,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 # could use anything really -> PIL or read in as numpy array\n",
     "import json \n",
+    "import logging\n",
     "from pathlib import Path\n",
     "from PIL import Image # cv2 doesnt actually work well with pathlib and raises an error with some of our filenames\n",
     "from pytesseract import image_to_data # https://github.com/UB-Mannheim/tesseract/wiki\n",
-    "from pytesseract import Output\n"
+    "from pytesseract import Output\n",
+    "\n",
+    "def create_fh_logger(file):\n",
+    "    logger = logging.getLogger()\n",
+    "    logger.setLevel(logging.INFO)\n",
+    "    formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s')\n",
+    "    file_handler = logging.FileHandler(file)\n",
+    "    file_handler.setLevel(logging.DEBUG)\n",
+    "    file_handler.setFormatter(formatter)\n",
+    "    logger.addHandler(file_handler)\n",
+    "    return logger"
    ]
   },
   {
@@ -31,7 +41,7 @@
     "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'imgs'\n",
     "dst = src.parent / \"ocr\"\n",
     "dst.mkdir(exist_ok=True)\n",
-    "logs = Path.cwd() / 'logs'\n",
+    "logs = src.parent.parent / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
     "logger = create_fh_logger(logs / \"ocr.log\")\n",
     "already_ocrd = list(dst.glob('*.json'))"
