--- a/notebooks/4_analyze_output_ocr_text.ipynb
+++ b/notebooks/4_analyze_output_ocr_text.ipynb
@@ -42,7 +42,7 @@
     "# locations of json files + a place to store a log\n",
     "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
     "files = list(src.glob('*json'))\n",
-    "logs = Path.cwd().parent.parent / 'processing' / 'logs'\n",
+    "logs = src.parent.parent  / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
     "logger = create_fh_logger(logs / \"analyze_ocr.log\")"
    ]
