--- a/notebooks/5_clean_tokenize_ocr.ipynb
+++ b/notebooks/5_clean_tokenize_ocr.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
     "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
     "dst = src.parent / 'tokenized'\n",
     "files = list(src.glob('*json'))\n",
-    "logs = Path.cwd().parent.parent / 'processing' / 'logs'\n",
+    "logs = src.parent.parent / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
     "logger = create_fh_logger(logs / \"tokenize_ocr.log\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
