--- a/notebooks/6_create_topic_model.ipynb
+++ b/notebooks/6_create_topic_model.ipynb
@@ -50,7 +50,7 @@
     "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'tokenized'\n",
     "dst = src.parent / 'topics'\n",
     "files = list(src.glob('*json'))\n",
-    "logs = Path.cwd() / 'logs'\n",
+    "logs = src.parent.parent / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
     "logger = create_fh_logger(logs / \"topic_model.log\")"
    ]
