improved pdf to image conversion code

--- a/notebooks/1_fetch_nro.ipynb
+++ b/notebooks/1_fetch_nro.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,26 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pdfs = list(output_folder.glob(\"*pdf\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following IDs do not have associated PDFs downloaded in this file system: 226,472,696,1119,1501,1513\n"
-     ]
-    }
-   ],
    "source": [
     "have = [int(str(file).replace('.pdf', '').split('_')[-1]) for file in pdfs]\n",
     "want = range(1, 2359, 1)\n",
@@ -109,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### I manually reviewed the missing records and they are broken links on NROs site as well. I e-mailed NRO to inform them of the broken links and site functionality."
+    "I manually reviewed the missing records and they are broken links on NROs site as well. I e-mailed NRO to inform them of the broken links and site functionality."
    ]
   }
  ],
