--- a/notebooks/2_convert_nro_pdfs_to_imgs.ipynb
+++ b/notebooks/2_convert_nro_pdfs_to_imgs.ipynb
@@ -52,12 +52,8 @@
    "source": [
     "for pdf in pdfs:\n",
     "    logger.info(f\"Working on {str(pdf.name).encode('utf-8')}\")\n",
-    "    pgs = convert_from_path(pdf_path=pdf, dpi=200, fmt='png') # returns a list of PIL images (1 page = 1 image)\n",
-    "    for pg_num, pg in enumerate(pgs):\n",
-    "        save_loc = dst / pdf.stem\n",
-    "        save_loc.mkdir(parents=True, exist_ok=True)\n",
-    "        save_loc = save_loc / f'{str(pg_num)}.png'\n",
-    "        pg.save(save_loc, format='png')\n",
+    "    save_loc = dst / pdf.stem\n",
+    "    pgs = convert_from_path(pdf_path=pdf, dpi=300, fmt='png', thread_count=32, output_folder=save_loc)\n",
     "    logger.info(f\"Finished {str(pdf.name).encode('utf-8')}\")"
    ]
   }
