removed duplicative logging  function

--- a/notebooks/2_convert_nro_pdfs_to_imgs.ipynb
+++ b/notebooks/2_convert_nro_pdfs_to_imgs.ipynb
@@ -17,16 +17,9 @@
     "import logging\n",
     "from pathlib import Path \n",
     "from pdf2image import convert_from_path\n",
-    "\n",
-    "def create_fh_logger(file):\n",
-    "    logger = logging.getLogger()\n",
-    "    logger.setLevel(logging.INFO)\n",
-    "    formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s')\n",
-    "    file_handler = logging.FileHandler(file)\n",
-    "    file_handler.setLevel(logging.DEBUG)\n",
-    "    file_handler.setFormatter(formatter)\n",
-    "    logger.addHandler(file_handler)\n",
-    "    return logger"
+    "import sys\n",
+    "sys.path.append(str(Path.cwd().parent))\n",
+    "from utils import create_fh_logger"
    ]
   },
   {
@@ -56,6 +49,13 @@
     "    pgs = convert_from_path(pdf_path=pdf, dpi=300, fmt='png', thread_count=32, output_folder=save_loc)\n",
     "    logger.info(f\"Finished {str(pdf.name).encode('utf-8')}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
