--- a/notebooks/3_convert_imgs_to_json_text.ipynb
+++ b/notebooks/3_convert_imgs_to_json_text.ipynb
@@ -16,20 +16,14 @@
    "source": [
     "import json \n",
     "import logging\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "from PIL import Image # cv2 doesnt actually work well with pathlib and raises an error with some of our filenames\n",
     "from pytesseract import image_to_data # https://github.com/UB-Mannheim/tesseract/wiki\n",
     "from pytesseract import Output\n",
     "\n",
-    "def create_fh_logger(file):\n",
-    "    logger = logging.getLogger()\n",
-    "    logger.setLevel(logging.INFO)\n",
-    "    formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s')\n",
-    "    file_handler = logging.FileHandler(file)\n",
-    "    file_handler.setLevel(logging.DEBUG)\n",
-    "    file_handler.setFormatter(formatter)\n",
-    "    logger.addHandler(file_handler)\n",
-    "    return logger"
+    "sys.path.append(str(Path.cwd().parent))\n",
+    "from utils import create_fh_logger"
    ]
   },
   {
