--- a/notebooks/4_analyze_output_ocr_text.ipynb
+++ b/notebooks/4_analyze_output_ocr_text.ipynb
@@ -22,15 +22,9 @@
     "from pathlib import Path\n",
     "import regex as re\n",
     "\n",
-    "def create_fh_logger(file):\n",
-    "    logger = logging.getLogger()\n",
-    "    logger.setLevel(logging.INFO)\n",
-    "    formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s')\n",
-    "    file_handler = logging.FileHandler(file)\n",
-    "    file_handler.setLevel(logging.DEBUG)\n",
-    "    file_handler.setFormatter(formatter)\n",
-    "    logger.addHandler(file_handler)\n",
-    "    return logger"
+    "import sys\n",
+    "sys.path.append(str(Path.cwd().parent))\n",
+    "from utils import create_fh_logger"
    ]
   },
   {
