--- a/notebooks/6_create_topic_model.ipynb
+++ b/notebooks/6_create_topic_model.ipynb
@@ -26,18 +26,9 @@
     "import json \n",
     "import logging\n",
     "from pathlib import Path\n",
-    "\n",
-    "import logging\n",
-    "\n",
-    "def create_fh_logger(file):\n",
-    "    logger = logging.getLogger()\n",
-    "    logger.setLevel(logging.INFO)\n",
-    "    formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s')\n",
-    "    file_handler = logging.FileHandler(file)\n",
-    "    file_handler.setLevel(logging.DEBUG)\n",
-    "    file_handler.setFormatter(formatter)\n",
-    "    logger.addHandler(file_handler)\n",
-    "    return logger"
+    "import sys\n",
+    "sys.path.append(str(Path.cwd().parent))\n",
+    "from utils import create_fh_logger"
    ]
   },
   {
