file structure change, improved dc3 geolocation, include notebook code

--- a/notebooks/nro/1_fetch_nro.ipynb
+++ b/notebooks/nro/1_fetch_nro.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_folder = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
+    "output_folder = Path.cwd().parent.parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
     "base_url = 'https://www.nro.gov'\n",
     "r = requests.get(f'{base_url}/foia-home/foia-declassified-major-nro-programs-and-projects/CAL-Library-Listing/')"
    ]
@@ -94,6 +94,22 @@
    "source": [
     "I manually reviewed the missing records and they are broken links on NROs site as well. I e-mailed NRO to inform them of the broken links and site functionality."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
