--- a/notebooks/nro/2_convert_nro_pdfs_to_imgs.ipynb
+++ b/notebooks/nro/2_convert_nro_pdfs_to_imgs.ipynb
@@ -18,7 +18,7 @@
     "from pathlib import Path \n",
     "from pdf2image import convert_from_path\n",
     "import sys\n",
-    "sys.path.append(str(Path.cwd().parent))\n",
+    "sys.path.append(str(Path.cwd().parent.parent))\n",
     "from utils import create_fh_logger"
    ]
   },
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
+    "src = Path.cwd().parent.parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
     "pdfs = sorted(list(src.glob('*pdf')))\n",
     "dst = src.parent / 'imgs'\n",
     "dst.mkdir(exist_ok=True)\n",
