--- a/notebooks/nro/4_analyze_output_ocr_text.ipynb
+++ b/notebooks/nro/4_analyze_output_ocr_text.ipynb
@@ -23,7 +23,7 @@
     "import regex as re\n",
     "\n",
     "import sys\n",
-    "sys.path.append(str(Path.cwd().parent))\n",
+    "sys.path.append(str(Path.cwd().parent.parent))\n",
     "from utils import create_fh_logger"
    ]
   },
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# locations of json files + a place to store a log\n",
-    "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
+    "src = Path.cwd().parent.parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
     "files = list(src.glob('*json'))\n",
     "logs = src.parent.parent  / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
