--- a/notebooks/nro/3_convert_imgs_to_json_text.ipynb
+++ b/notebooks/nro/3_convert_imgs_to_json_text.ipynb
@@ -22,7 +22,7 @@
     "from pytesseract import image_to_data # https://github.com/UB-Mannheim/tesseract/wiki\n",
     "from pytesseract import Output\n",
     "\n",
-    "sys.path.append(str(Path.cwd().parent))\n",
+    "sys.path.append(str(Path.cwd().parent.parent))\n",
     "from utils import create_fh_logger"
    ]
   },
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'imgs'\n",
+    "src = Path.cwd().parent.parent.parent / 'processing' / 'nro_declassified' / 'imgs'\n",
     "dst = src.parent / \"ocr\"\n",
     "dst.mkdir(exist_ok=True)\n",
     "logs = src.parent.parent / 'logs'\n",
