--- a/notebooks/geolocation/1_geolocating_dc3.ipynb
+++ b/notebooks/geolocation/1_geolocating_dc3.ipynb
@@ -26,7 +26,7 @@
     "input_file = Path.cwd().parent.parent.parent / 'processing' / 'geolocation' / 'AttachmentA.png'\n",
     "intermediate_file = input_file.parent / 'test.png'\n",
     "output_file = Path.cwd().parent.parent / 'assets' / 'se304_attacha.png'\n",
-    "airport = GroundControlPoint(row=1235, col=641, y=36.47853873, x=-82.3953803) # the image was opened in paint to get the pixel info\n",
+    "airport = GroundControlPoint(row=1227, col=721, y=36.47853873, x=-82.3953803) # the image was opened in paint to get the pixel info\n",
     "holston_vor = GroundControlPoint(row=1512, col=2091, y=36.4370628, x=-82.1295676)\n",
     "transform = from_gcps([airport, holston_vor])"
    ]
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with rasterio.open(output_file, 'w', **transformed.profile) as f: # SAVE THE FINAL OUTPUT! DALE YEAH\n",
-    "    #f.write(file.read()) # do not continuously overwrite the output"
+    "with rasterio.open(output_file, 'w', **transformed.profile) as f: # SAVE THE FINAL OUTPUT! DALE YEAH\n",
+    "    f.write(file.read()) # do not continuously overwrite the output"
    ]
   },
   {
