minor changes to download links

--- a/src/notebooks/nro/2_convert_nro_pdfs_to_imgs.ipynb
+++ b/src/notebooks/nro/2_convert_nro_pdfs_to_imgs.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = Path.cwd().parent.parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
+    "src = Path.cwd().parent.parent.parent.parent / 'processing' / 'nro_declassified' / 'pdfs'\n",
     "pdfs = sorted(list(src.glob('*pdf')))\n",
     "dst = src.parent / 'imgs'\n",
     "dst.mkdir(exist_ok=True)\n",
@@ -45,7 +45,17 @@
     "for pdf in pdfs:\n",
     "    logger.info(f\"Working on {str(pdf.name).encode('utf-8')}\")\n",
     "    save_loc = dst / pdf.stem\n",
-    "    pgs = convert_from_path(pdf_path=pdf, dpi=300, fmt='png', thread_count=16, output_folder=save_loc)\n",
+    "    save_loc.mkdir(exist_ok=True)\n",
+    "    try:\n",
+    "        pgs = convert_from_path(pdf_path=pdf, dpi=300, fmt='png', thread_count=16, output_folder=save_loc, output_file='') \n",
+    "        del pgs # remove from memory so we can rename them\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(save_loc)\n",
+    "    for img in save_loc.glob('*png'): # files are saved with strange prefix then page number, just want page number\n",
+    "        pg_num = img.stem.split('-')[-1] # keep the page number from the naming prefix\n",
+    "        new = img.with_name(f'{pg_num}{img.suffix}')\n",
+    "        img.rename(new)\n",
     "    logger.info(f\"Finished {str(pdf.name).encode('utf-8')}\")"
    ]
   },
