fix: major rework, final iteration

--- a/src/assets/project.bib
+++ b/src/assets/project.bib
@@ -80,3 +80,67 @@
 	year = {1961},
 	pages = {12},
 }
+
+@misc{noauthor_bert_nodate,
+	title = {bert - {Google} {Search}},
+	url = {https://www.google.com/search?client=firefox-b-1-d&q=bert},
+	urldate = {2024-04-23},
+}
+
+@misc{noauthor_bert_nodate-1,
+	title = {{BERT}},
+	url = {https://huggingface.co/docs/transformers/en/model_doc/bert},
+	abstract = {We’re on a journey to advance and democratize artificial intelligence through open source and open science.},
+	urldate = {2024-04-23},
+	file = {Snapshot:C\:\\Users\\brasw\\Zotero\\storage\\GFEDGQBI\\bert.html:text/html},
+}
+
+@misc{noauthor_clovaaicraft-pytorch_2024,
+	title = {clovaai/{CRAFT}-pytorch},
+	copyright = {MIT},
+	url = {https://github.com/clovaai/CRAFT-pytorch},
+	abstract = {Official implementation of Character Region Awareness for Text Detection (CRAFT)},
+	urldate = {2024-04-23},
+	publisher = {Clova AI Research},
+	month = apr,
+	year = {2024},
+	note = {original-date: 2019-06-04T07:43:58Z},
+	keywords = {craft, curved-text, cvpr2019, detection, ocr, ocr-detection, pytorch, text-detection},
+}
+
+@misc{argman_argmaneast_2024,
+	title = {argman/{EAST}},
+	copyright = {GPL-3.0},
+	url = {https://github.com/argman/EAST},
+	abstract = {A tensorflow implementation of EAST text detector},
+	urldate = {2024-04-23},
+	author = {argman},
+	month = apr,
+	year = {2024},
+	note = {original-date: 2017-07-31T10:56:36Z},
+	keywords = {deep-learning, ocr, tensorflow, text-detection},
+}
+
+@misc{ilango_using_2019,
+	title = {Using {NLP} ({BERT}) to improve {OCR} accuracy},
+	url = {https://medium.com/doma/using-nlp-bert-to-improve-ocr-accuracy-385c98ae174c},
+	abstract = {Optical Character Recognition (OCR) is a popular technique used to extract data from scanned documents. As you would expect, the accuracy…},
+	language = {en},
+	urldate = {2024-04-23},
+	journal = {Doma},
+	author = {Ilango, Ravi},
+	month = dec,
+	year = {2019},
+	file = {Snapshot:C\:\\Users\\brasw\\Zotero\\storage\\HN6UQSDK\\using-nlp-bert-to-improve-ocr-accuracy-385c98ae174c.html:text/html},
+}
+
+@misc{262588213843476_simple_nodate,
+	title = {A simple example script for predicting masked words in a sentence using {BERT}.},
+	url = {https://gist.github.com/yuchenlin/a2f42d3c4378ed7b83de65c7a2222eb2},
+	abstract = {A simple example script for predicting masked words in a sentence using BERT. - masked\_word\_prediction\_bert.py},
+	language = {en},
+	urldate = {2024-04-23},
+	journal = {Gist},
+	author = {262588213843476},
+	file = {Snapshot:C\:\\Users\\brasw\\Zotero\\storage\\LW7B5KW3\\a2f42d3c4378ed7b83de65c7a2222eb2.html:text/html},
+}
