--- a/src/notebooks/nro/5_clean_tokenize_ocr.ipynb
+++ b/src/notebooks/nro/5_clean_tokenize_ocr.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# locations of json files + a place to store a log\n",
-    "src = Path.cwd().parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
+    "src = Path.cwd().parent.parent.parent.parent / 'processing' / 'nro_declassified' / 'ocr'\n",
     "dst = src.parent / 'tokenized'\n",
     "files = list(src.glob('*json'))\n",
     "logs = src.parent.parent / 'logs'\n",
@@ -46,13 +46,6 @@
    "outputs": [],
    "source": [
     "def clean_text(txt):\n",
-    "    \"\"\"This is put into a function to add additional cleaning mechanisms if needed\n",
-    "\n",
-    "    :param txt: _description_\n",
-    "    :type txt: _type_\n",
-    "    :return: _description_\n",
-    "    :rtype: _type_\n",
-    "    \"\"\"\n",
     "    txt = re.sub(\"[^A-Za-z0-9 ]+\", '', txt)\n",
     "    txt = txt.lower()\n",
     "    return txt\n",
