--- a/src/notebooks/nro/ex_7_clean_imgs.ipynb
+++ b/src/notebooks/nro/ex_7_clean_imgs.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook will use craft to detect if text should be rotated prior to using tesseract."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,73 +36,6 @@
     "logs = src.parent.parent / 'logs'\n",
     "logs.mkdir(exist_ok=True)\n",
     "logger = create_fh_logger(logs / \"cleaned_imgs.log\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rotation_test = r'C:\\Users\\brasw\\Desktop\\School\\Spring 24\\GGS 590\\project\\processing\\nro_declassified\\imgs\\1959-03-02_CHARTS AUGMENTED INSTRUMENTATION IIA PROGRAMLISTS TYPES OF F_427'\n",
-    "noise_test = r'C:\\Users\\brasw\\Desktop\\School\\Spring 24\\GGS 590\\project\\processing\\nro_declassified\\imgs\\1959-10-14_MEMO APPARENT DISCREPANCIES BETWEEN 117L AND C ASSEMBLY FACI_833'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fft_low_pass_filter(image, cutoff_frequency):\n",
-    "    # Convert image to grayscale\n",
-    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "    \n",
-    "    # Perform FFT\n",
-    "    f = np.fft.fft2(gray_image)\n",
-    "    f_shift = np.fft.fftshift(f)\n",
-    "    \n",
-    "    # Apply low-pass filter\n",
-    "    rows, cols = gray_image.shape\n",
-    "    crow, ccol = rows // 2, cols // 2\n",
-    "    mask = np.zeros((rows, cols), np.uint8)\n",
-    "    mask[crow - cutoff_frequency:crow + cutoff_frequency, ccol - cutoff_frequency:ccol + cutoff_frequency] = 1\n",
-    "    f_shift_filtered = f_shift * mask\n",
-    "    \n",
-    "    # Inverse FFT\n",
-    "    f_filtered = np.fft.ifftshift(f_shift_filtered)\n",
-    "    filtered_image = np.fft.ifft2(f_filtered)\n",
-    "    filtered_image = np.abs(filtered_image)\n",
-    "    \n",
-    "    return filtered_image\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise_img = list(Path(noise_test).glob('*png'))[0]\n",
-    "img = cv2.imread(str(noise_img))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img[1500:2000, 500:1000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow( cv2.fastNlMeansDenoisingColored(img, None, 21, 21, 55, 55)[1500:2000, 500:1000])"
    ]
   },
   {
@@ -110,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
